postgresql-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\OpenShift\kompose.exe convert
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: postgresql
  name: postgresql
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\OpenShift\kompose.exe convert
        kompose.version: 1.20.0 (f3d54d784)
      creationTimestamp: null
      labels:
        io.kompose.service: postgresql
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: db
        - name: POSTGRES_PASSWORD
          value: my_password
        - name: POSTGRES_USER
          value: my_user
        image: postgres
        name: postgresql
        resources: {}
      restartPolicy: Always
status: {}
