web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\OpenShift\kompose.exe convert
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\OpenShift\kompose.exe convert
        kompose.version: 1.20.0 (f3d54d784)
      creationTimestamp: null
      labels:
        io.kompose.service: web
    spec:
      containers:
      - args:
        - gunicorn
        - -c
        - gconfig.py
        - my_openshift.wsgi:application
        image: web
        name: web
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
status: {}
