nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\OpenShift\kompose.exe convert
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  ports:
  - name: "1337"
    port: 1337
    targetPort: 80
  selector:
    io.kompose.service: nginx
status:
  loadBalancer: {}
