web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\OpenShift\kompose.exe convert
    kompose.version: 1.20.0 (f3d54d784)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  ports:
  - name: "443"
    port: 443
    targetPort: 80
  selector:
    io.kompose.service: web
status:
  loadBalancer: {}
